# dweepbot

./: .env.example  .gitignore  ARCHITECTURE .md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GETTING_STARTED_PRO.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LICENSE  LICENSE-COMMERCIAL.md  Makefile  Makefile (1)  OPEN_CORE_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  __init__.py  agent.py  api_server.py  base.py  cli.py  deeploy.sh  docker-compose (1).yml  docker-compose.pro.yml  dockerignore  file_ops.py  github_workflows_ci.yml  gitignore  gitignore (1)  http_client.py  install.sh  planner.py  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements (2).txt  requirements (3).txt  requirements-all.txt  (+5 more)
dashboard/: CommandCenter.jsx  README.md  package.json
docs/: README.md
dweepbot/: __init__.py  core.py
examples/: example_usage.py
src/: SharkCommandCenter.jsx
src/dweepbot/: __init__.py  cli.py  config.py  deepseek.py  license.py  python_executor.py
src/dweepbot/core/: __init__.py  agent.py  executor.py  model_router.py  planner.py  reflection.py
src/dweepbot/memory/: __init__.py  schemas.py  vector_store.py  working.py
src/dweepbot/oss/: __init__.py
src/dweepbot/pro/: __init__.py  advanced_memory.py  dashboard_api.py  multi_agent.py  task_scheduler.py
src/dweepbot/stae/: __init__.py  agent_state.py  serialization.py
src/dweepbot/tools/: __init__.py  base.py  notification.py  rag_query.py  registry.py  web_search.py
src/dweepbot/utils/: __init__.py  anthropic_client.py  cost_tracker.py  deepseek_client.py  kimi_client.py  logger.py  validators.py
src/dweepseek/: __init__.py
src/dweepseek/core/: __init__.py  schemas.py
src/dweepseek/examples/: __init__.py  research_task.py
src/memory/: vector_store.py
tests/: basic_usage.py  conftewt.py  test_agent.py  test_core.py  test_full_workflows.py  test_imports.py
workflows/: ci.yml
