[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dweepbot"
version = "0.1.0"
description = "Production-grade autonomous AI agent framework with DeepSeek integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DweepBot Team", email = "hello@dweepbot.com"}
]
keywords = ["ai", "agent", "autonomous", "deepseek", "llm", "framework", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
web = [
    "duckduckgo-search>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
]
docs = [
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.5.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]
notifications = [
    "slack-sdk>=3.23.0",
    "discord.py>=2.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "isort>=5.12.0",
]
all = [
    "dweepbot[web,docs,rag,notifications]",
]

[project.urls]
Homepage = "https://github.com/dweepbot/dweepbot"
Repository = "https://github.com/dweepbot/dweepbot"
Documentation = "https://github.com/dweepbot/dweepbot/tree/main/docs"
"Bug Reports" = "https://github.com/dweepbot/dweepbot/issues"

[project.scripts]
dweepbot = "dweepbot.cli:main"

[tool.setuptools]
packages = ["dweepbot"]

[tool.setuptools.package-data]
dweepbot = ["config/*.yaml", "prompts/*.txt"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=dweepbot --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["dweepbot"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
